# rptodo

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
rptodo/: __init__.py  __main__.py  cli.py  config.py  database.py  rptodo.py
tests/: test_rptodo.py
