[tool.poetry]
name = "rptodo"
version = "0.1.0"
description = "A command-line todo projects based on a RealPython tutorial."
authors = ["Josh Benson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "0.13.0"
colorama = ">=0.4.5"
shellingham = "1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
pytest-cov = "^6.0.0"
pylint = "^3.3.1"
pre-commit = "^4.0.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
